--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -23,11 +23,21 @@ http {
         server_name  localhost;
 
         location / {
+            proxy_read_timeout 3000;
+	        proxy_connect_timeout 3000;
+	        proxy_send_timeout 3000;
+
+	        proxy_pass http://js:3000/;
+        }
+
+        location /api/ {
             proxy_pass http://websocket/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection $connection_upgrade;
             proxy_set_header Host $host;
+            proxy_buffers 512 256M;
+            proxy_buffer_size 256M;
 
             proxy_read_timeout 3600;
         }
